# ck

./: .gitignore  Cargo.toml  shell.nix
.github/workflows/: release.yml
ck-cli/: Cargo.toml
ck-embed/: Cargo.toml
ck-embed/src/: lib.rs  local_reranker.rs  model2vec.rs  reranker.rs
ck-models/src/: lib.rs
ck-tui/: Cargo.toml
ck-vscode/: package-lock.json  package.json
docs-site/: package.json  pnpm-lock.yaml
