[workspace]
resolver = "2"
members = [
    "ck-cli",
    "ck-core",
    "ck-index",
    "ck-engine",
    "ck-chunk",
    "ck-embed",
    "ck-models",
    "ck-tui",
]

[workspace.package]
version = "0.7.11"
edition = "2024"
authors = ["Mike Renwick"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/BeaconBay/ck"
rust-version = "1.88.0"


[workspace.dependencies]
# Intra-workspace crates — defined here so a version bump only touches
# workspace.package.version and these eight lines, not every Cargo.toml.
ck-core = { path = "ck-core", version = "0.7.11" }
ck-models = { path = "ck-models", version = "0.7.11" }
ck-embed = { path = "ck-embed", version = "0.7.11", default-features = false }
ck-chunk = { path = "ck-chunk", version = "0.7.11", default-features = false }
ck-index = { path = "ck-index", version = "0.7.11", default-features = false }
ck-engine = { path = "ck-engine", version = "0.7.11", default-features = false }
ck-tui = { path = "ck-tui", version = "0.7.11", default-features = false }

anyhow = "1.0"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.50", features = ["full"] }
clap = { version = "4.6", features = ["derive"] }
regex = "1.12"
blake3 = "1.8"
memmap2 = "0.9"
bincode = "3.0"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
rayon = "1.12"
walkdir = "2.4"
fs4 = "0.13"
tantivy = "0.24"
tree-sitter = "0.25"
tree-sitter-python = "0.25"
tree-sitter-typescript = "0.23"
tree-sitter-haskell = "0.23"
tree-sitter-rust = "0.24"
tree-sitter-ruby = "0.23"
tree-sitter-go = "0.25"
tree-sitter-c = "0.24"
tree-sitter-cpp = "0.23"
tree-sitter-c-sharp = "0.23"
tree-sitter-zig = "1.1"
tree-sitter-dart = "0.0.4"
tree-sitter-elixir = "0.3"
tree-sitter-md = "0.5.3"
fastembed = { version = "5.13", default-features = false, features = ["hf-hub-rustls-tls", "ort-download-binaries"] }
openssl = { version = "0.10" }
tempfile = "3.27"
glob = "0.3"
globset = "0.4"
ignore = "0.4"
ctrlc = "3.5"
pdf-extract = "0.9"
uuid = { version = "1.23", features = ["v4", "serde"] }
base64 = "0.22"
sha2 = "0.10"
hf-hub = { version = "0.4.3", default-features = false, features = ["ureq"] }
tokenizers = "0.20.1"
# Pinned exactly to rc.11. ort 2.0.0-rc.12 made SessionOptionsPointer
# !Sync, which removes Send+Sync from ort::Error<SessionBuilder> and
# breaks `?`-conversion into anyhow::Error throughout ck-embed::mixedbread.
# Without the `=` pin, a fresh `cargo install ck-search` (no --locked)
# upgrades to rc.12 and 36 errors cascade. See:
# https://github.com/BeaconBay/ck/pull/<TODO> for follow-up to evaluate rc.12.
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["download-binaries", "tls-native", "ndarray", "std", "half"] }
once_cell = "1.21"
ndarray = { version = "0.17", default-features = false, features = ["std"] }
half = "2.4"
num_cpus = "1.16"
