[package]
name = "ck-search"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Semantic grep by embedding - find code by meaning, not just keywords"
repository = "https://github.com/BeaconBay/ck"
homepage = "https://github.com/BeaconBay/ck"
readme = "../README.md"
keywords = ["grep", "search", "semantic", "code", "cli"]
categories = ["command-line-utilities", "development-tools"]

[[bin]]
name = "ck"
path = "src/main.rs"

[lib]
name = "ck_search"
path = "src/lib.rs"

[dependencies]
ck-core = { workspace = true }
ck-index = { workspace = true }
ck-engine = { workspace = true }
ck-chunk = { workspace = true }
ck-embed = { workspace = true }
ck-models = { workspace = true }
ck-tui = { workspace = true }

anyhow = { workspace = true }
clap = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rmcp = { version = "0.6", features = ["transport-io"] }
rmcp-macros = "0.6"
tokio-util = { version = "0.7", features = ["rt", "full"] }
chrono = { version = "0.4", features = ["serde"] }
thiserror = { workspace = true }
schemars = "1.2"
glob = { workspace = true }
globset = { workspace = true }
regex = { workspace = true }
indicatif = "0.17"
console = "0.15"
owo-colors = "4.3"
walkdir = "2.3"
ratatui = "0.26"
crossterm = "0.27"
shlex = "2.0"
syntect = "5.2"
openssl = { workspace = true, optional = true }
uuid = { workspace = true }
base64 = { workspace = true }
sha2 = { workspace = true }
dirs = "5.0"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[features]
default = ["fastembed", "mixedbread", "bundled-models"]
fastembed = ["ck-embed/fastembed", "ck-index/fastembed", "ck-engine/fastembed", "ck-chunk/fastembed", "ck-tui/fastembed"]
mixedbread = ["ck-embed/mixedbread", "ck-index/mixedbread", "ck-engine/mixedbread", "ck-chunk/mixedbread", "ck-tui/mixedbread"]
# Local ONNX providers (model2vec embedder + Jina reranker), bundled offline.
bundled-models = ["ck-embed/bundled-models"]
vendored-openssl = ["openssl?/vendored"]

[dev-dependencies]
tempfile = { workspace = true }
serial_test = "3.5"
