[package]
name = "ck-embed"
version.workspace = true
edition.workspace = true
authors.workspace = true
license.workspace = true
rust-version.workspace = true
description = "Text embedding providers for ck semantic search"
repository = "https://github.com/BeaconBay/ck"
keywords = ["embedding", "nlp", "semantic"]
categories = ["science"]

[dependencies]
ck-core = { workspace = true }
ck-models = { workspace = true }

anyhow = { workspace = true }
serde = { workspace = true }
tokio = { workspace = true }

fastembed = { workspace = true, optional = true }
hf-hub = { workspace = true, optional = true }
tokenizers = { workspace = true, optional = true }
ort = { workspace = true, optional = true }
once_cell = { workspace = true, optional = true }
ndarray = { workspace = true, optional = true }
num_cpus = { workspace = true, optional = true }
half = { workspace = true, optional = true }

[features]
default = ["fastembed", "mixedbread", "model2vec", "bundled-models"]
fastembed = ["dep:fastembed"]
mixedbread = [
    "dep:hf-hub",
    "dep:tokenizers",
    "dep:ort",
    "dep:once_cell",
    "dep:ndarray",
    "dep:num_cpus",
]
# Local ONNX providers ported from brightworker/org-store: the Qwen3
# model2vec embedder and the Jina-Reranker-Tiny cross-encoder.
model2vec = ["dep:ort", "dep:tokenizers", "dep:half"]
# Embed the model/tokenizer blobs into the binary for fully offline use.
bundled-models = ["model2vec"]
